--- a/job.html
+++ b/job.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="listing-container">
                     <div class="information">
-                        <h2>Job Oppurtunities at Apple</h2>
+                        <h2>Job Opportunities at Apple</h2>
                         <p>Is Apple hiring? You bet. Right now we're looking for some really good people—creative, talented, passionate people. Engineers. Programmers. Manufacturing, marketing and financial professionals. People who think outside the box and who want to make a difference. You could be one of them. And one of us.</p>
                     </div>
                     <div class="information">
