--- a/wheretobuy.html
+++ b/wheretobuy.html
@@ -25,7 +25,7 @@
                     <h2 id="products"><a href="products.html">Products</a></h2>
                     <h2 id="where-to-buy"><a href="wheretobuy.html">Where to Buy</a></h2>
                     <h2 id="education"><a href="education.html">Education</a></h2>
-                    <h2 id="job"><a href="job.html">Job Oppurtunities at Apple</a></h2>
+                    <h2 id="job"><a href="job.html">Job Opportunities at Apple</a></h2>
                     <h2 id="support"><a href="support.html">Support</a></h2>
                 </div>
                 <div class="hotNews">
@@ -143,7 +143,7 @@
                     <a href="education.html">Education</a> |
                     <a href="index.html">Home</a> |
                     <a href="wheretobuy.html">Where to Buy</a> |
-                    <a href="job.html">Job Oppurtunities at Apple</a> |
+                    <a href="job.html">Job Opportunities at Apple</a> |
                     <a href="signin.html">Sign In</a> |
                     <a href="signup.html">Sign Up</a> |
                     <a href="support.html">Support</a> |
