--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
                     <h2 id="products"><a href="products.html">Products</a></h2>
                     <h2 id="where-to-buy"><a href="wheretobuy.html">Where to Buy</a></h2>
                     <h2 id="education"><a href="education.html">Education</a></h2>
-                    <h2 id="job"><a href="">Job Opportunities at Apple</a></h2>
+                    <h2 id="job"><a href="job.html">Job Opportunities at Apple</a></h2>
                     <h2 id="support"><a href="support.html">Support</a></h2>
                 </div>
                 <div class="hotNews">
